config/profile/rhdh/default-config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage # placeholder for 'backstage-<cr-name>'
spec:
  # replicas: 1 # Intentionally omitted to allow HPA or custom scaling control.
  selector:
    matchLabels:
      rhdh.redhat.com/app: # placeholder for 'backstage-<cr-name>'
  # important: keep strategy type (even if default) to allow patching it
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        rhdh.redhat.com/app: # placeholder for 'backstage-<cr-name>'
    spec:
      automountServiceAccountToken: false
      # if securityContext not present in AKS/EKS, the error is like this:
      #Error: EACCES: permission denied, open '/dynamic-plugins-root/backstage-plugin-scaffolder-backend-module-github-dynamic-0.2.2.tgz'
      # fsGroup doesn not work for Openshift
      #securityContext:
      #   fsGroup: 1001
      volumes:
        - ephemeral:
            volumeClaimTemplate:
              spec:
                accessModes:
                  - ReadWriteOnce
                resources:
                  requests:
                    storage: 2Gi
          name: dynamic-plugins-root
        # TODO Configuring dynamic plugins registry auth this way is deprecated and supported only for documentation backward compatibility.
        - name: dynamic-plugins-registry-auth
          secret:
            defaultMode: 416
            optional: true
            secretName: dynamic-plugins-registry-auth
        - name: extensions-catalog
          emptyDir: {}
        - emptyDir: {}
          name: npmcacache
        - name: temp
          emptyDir: {}
      containers:
        - name: backstage-backend
          # image will be replaced by the value of the `RELATED_IMAGE_backstage` env var, if set
          image: quay.io/rhdh-community/rhdh:next-2.1
          imagePullPolicy: IfNotPresent
          args:
            - "--config"
            - "dynamic-plugins-root/app-config.dynamic-plugins.yaml"
          securityContext:
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          startupProbe:
            # This gives enough time upon container startup before the liveness and readiness probes are triggered.
            # Giving (120s = initialDelaySeconds + failureThreshold * periodSeconds) to account for the worst case scenario.
            httpGet:
              path: /.backstage/health/v1/liveness
              port: backend
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 4
            periodSeconds: 20
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /.backstage/health/v1/readiness
              port: backend
              scheme: HTTP
            # Both liveness and readiness probes won't be triggered until the startup probe is successful.
            # The startup probe is already configured to give enough time for the application to be started.
            # So removing the additional delay here allows the readiness probe to be checked right away after the startup probe,
            # which helps make the application available faster to the end-user.
            #initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 2
            timeoutSeconds: 4
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /.backstage/health/v1/liveness
              port: backend
              scheme: HTTP
            # Both liveness and readiness probes won't be triggered until the startup probe is successful.
            # The startup probe is already configured to give enough time for the application to be started.
            # So removing the additional delay here allows the readiness probe to be checked right away after the startup probe,
            # which helps make the application available faster to the end-user.
            #initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 4
          ports:
            - name: backend
              containerPort: 7007
          volumeMounts:
            - mountPath: /opt/app-root/src/dynamic-plugins-root
              name: dynamic-plugins-root
            - name: extensions-catalog
              mountPath: /extensions
            - mountPath: /tmp
              name: temp
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 2.5Gi
              ephemeral-storage: 5Gi
          workingDir: /opt/app-root/src
