config/profile/rhdh/default-config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage # placeholder for 'backstage-<cr-name>'
spec:
  type: ClusterIP
  selector:
    rhdh.redhat.com/app:  # placeholder for 'backstage-<cr-name>'
  ports:
    - name: http-backend
      port: 80
      targetPort: backend
